src/rules/__snapshots__/no-implicit-close.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule no-implicit-close should contain documentation 1`] = `
{
  "description": "Some elements in HTML has optional end tags. When an optional tag is omitted a browser must handle it as if the end tag was present.

Omitted end tags can be ambigious for humans to read and many editors have trouble formatting the markup.",
  "url": "https://html-validate.org/rules/no-implicit-close.html",
}
`;

exports[`rule no-implicit-close smoketest 1`] = `
"error: Element <li> is implicitly closed by sibling (no-implicit-close)
  4 |
  5 | <ul>
> 6 | 	<li>foo
    | 	 ^^
  7 | 	<li>bar
  8 | 	<li>baz
  9 | </ul>
Selector: ul:nth-child(2) > li:nth-child(1)
error: Element <li> is implicitly closed by sibling (no-implicit-close)
   5 | <ul>
   6 | 	<li>foo
>  7 | 	<li>bar
     | 	 ^^
   8 | 	<li>baz
   9 | </ul>
  10 |
Selector: ul:nth-child(2) > li:nth-child(2)
error: Element <li> is implicitly closed by parent </ul> (no-implicit-close)
   6 | 	<li>foo
   7 | 	<li>bar
>  8 | 	<li>baz
     | 	 ^^
   9 | </ul>
  10 |
  11 | <ul>
Selector: ul:nth-child(2) > li:nth-child(3)
error: Element <li> is implicitly closed by sibling (no-implicit-close)
  10 |
  11 | <ul>
> 12 | 	<li class="foo">foo
     | 	 ^^
  13 | 	<li class="bar">bar
  14 | 	<li class="baz">baz
  15 | </ul>
Selector: ul:nth-child(3) > li:nth-child(1)
error: Element <li> is implicitly closed by sibling (no-implicit-close)
  11 | <ul>
  12 | 	<li class="foo">foo
> 13 | 	<li class="bar">bar
     | 	 ^^
  14 | 	<li class="baz">baz
  15 | </ul>
  16 |
Selector: ul:nth-child(3) > li:nth-child(2)
error: Element <li> is implicitly closed by parent </ul> (no-implicit-close)
  12 | 	<li class="foo">foo
  13 | 	<li class="bar">bar
> 14 | 	<li class="baz">baz
     | 	 ^^
  15 | </ul>
  16 |
  17 | <ul>
Selector: ul:nth-child(3) > li:nth-child(3)
error: Element <li> is implicitly closed by sibling (no-implicit-close)
  16 |
  17 | <ul>
> 18 | 	<li>foo<strong>bar</strong>
     | 	 ^^
  19 | 	<li>foo <input>
  20 | </ul>
  21 |
Selector: ul:nth-child(4) > li:nth-child(1)
error: Element <li> is implicitly closed by parent </ul> (no-implicit-close)
  17 | <ul>
  18 | 	<li>foo<strong>bar</strong>
> 19 | 	<li>foo <input>
     | 	 ^^
  20 | </ul>
  21 |
  22 | <dl>
Selector: ul:nth-child(4) > li:nth-child(2)
error: Element <dt> is implicitly closed by adjacent <dd> (no-implicit-close)
  21 |
  22 | <dl>
> 23 | 	<dt>title
     | 	 ^^
  24 | 	<dd>definition 1
  25 | 	<dd>definition 2
  26 | 	<dt>fred
Selector: dl > dt:nth-child(1)
error: Element <dd> is implicitly closed by sibling (no-implicit-close)
  22 | <dl>
  23 | 	<dt>title
> 24 | 	<dd>definition 1
     | 	 ^^
  25 | 	<dd>definition 2
  26 | 	<dt>fred
  27 | 	<dd>flintstone
Selector: dl > dd:nth-child(2)
error: Element <dd> is implicitly closed by adjacent <dt> (no-implicit-close)
  23 | 	<dt>title
  24 | 	<dd>definition 1
> 25 | 	<dd>definition 2
     | 	 ^^
  26 | 	<dt>fred
  27 | 	<dd>flintstone
  28 | </dl>
Selector: dl > dd:nth-child(3)
error: Element <dt> is implicitly closed by adjacent <dd> (no-implicit-close)
  24 | 	<dd>definition 1
  25 | 	<dd>definition 2
> 26 | 	<dt>fred
     | 	 ^^
  27 | 	<dd>flintstone
  28 | </dl>
  29 |
Selector: dl > dt:nth-child(4)
error: Element <dd> is implicitly closed by parent </dl> (no-implicit-close)
  25 | 	<dd>definition 2
  26 | 	<dt>fred
> 27 | 	<dd>flintstone
     | 	 ^^
  28 | </dl>
  29 |
  30 | <p>
Selector: dl > dd:nth-child(5)
error: Element <p> is implicitly closed by adjacent <address> (no-implicit-close)
  28 | </dl>
  29 |
> 30 | <p>
     |  ^
  31 | 	lorem ipsum
  32 | 	<address>spam</address>
  33 | </p>
Selector: p"
`;
